mkl/src/imports/cblas/CBLAS.cs


		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zsymm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zsyrk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte beta, ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zsyr2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztrmm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztrsm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, BlasTrans TransA,
                        BlasDiagonal Diag, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztrsm_batch(BlasLayout Layout, ref BlasSide Side_Array,
                            ref BlasUpLo Uplo_Array, ref BlasTrans Transa_Array,
                            ref BlasDiagonal Diag_Array, ref int M_Array,
                            ref int N_Array, ref byte alpha_Array,
                            ref byte A_Array, ref int lda_Array,
                            ref byte B_Array, ref int ldb_Array,
                            int group_count, ref int group_size);

        /*
        * Routines with prefixes C and Z only
        */
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_chemm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cherk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        float alpha, ref byte A, int lda,
                        float beta, ref byte C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cher2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, float beta,
                        ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zhemm(BlasLayout Layout, BlasSide Side,
                        BlasUpLo Uplo, int M, int N,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, ref byte beta,
                        ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zherk(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        double alpha, ref byte A, int lda,
                        double beta, ref byte C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zher2k(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans Trans, int N, int K,
                        ref byte alpha, ref byte A, int lda,
                        ref byte B, int ldb, double beta,
                        ref byte C, int ldc);

        /*
        * Routines with prefixes S and D only
        */
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern ref float cblas_sgemm_alloc(BlasIdentifier identifier, int M, int N, int K);
        
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgemm_pack(BlasLayout Layout, BlasIdentifier identifier,
                        BlasTrans Trans, int M, int N,
                        int K, float alpha, ref float src,
                        int ld, ref float dest);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgemm_compute(BlasLayout Layout, int TransA,
                        int TransB, int M, int N,
                        int K, ref float A,
                        int lda, ref float B, int ldb,
                        float beta, ref float C, int ldc);
		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgemm_free(ref float dest);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern ref double cblas_dgemm_alloc(BlasIdentifier identifier, int M, int N, int K);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgemm_pack(BlasLayout Layout, BlasIdentifier identifier,
                        BlasTrans Trans, int M, int N,
                        int K, double alpha, ref double src,
                        int ld, ref double dest);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgemm_compute(BlasLayout Layout, int TransA, int TransB, int M, int N, int K, ref double A,
                        int lda, ref double B, int ldb, double beta, ref double C, int ldc);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgemm_free(ref double dest);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_gemm_s16s16s32(BlasLayout Layout, BlasTrans TransA, BlasTrans TransB, MatrixOffset OffsetC, 
            int M, int N, int K, float alpha, ref short A, int lda, short ao, ref short B, int ldb, short bo, float beta, ref int C, int ldc, ref int cb);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_gemm_s8u8s32(BlasLayout Layout, BlasTrans TransA, BlasTrans TransB, MatrixOffset OffsetC,
            int M, int N, int K, float alpha, ref sbyte A, int lda, sbyte ao, ref byte B, int ldb, sbyte bo, float beta, ref int C, int ldc, ref int cb);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern int cblas_gemm_s8u8s32_pack_get_size(BlasIdentifier identifier, int M, int N, int K);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern int cblas_gemm_s16s16s32_pack_get_size(BlasIdentifier identifier, int M, int N, int K);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static unsafe extern void cblas_gemm_s8u8s32_pack(BlasLayout Layout,  BlasIdentifier identifier, BlasTrans Trans, 
            int M, int N, int K, void *src, int ld, void *dest);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_gemm_s16s16s32_pack(BlasLayout Layout,  BlasIdentifier identifier, BlasTrans Trans, 
            int M, int N, int K, ref short src, int ld, ref short dest);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static unsafe extern void cblas_gemm_s8u8s32_compute(BlasLayout Layout, int TransA, int TransB, MatrixOffset offsetc,
            int M, int N, int K, float alpha, ref sbyte A, int lda, sbyte ao, ref byte B, int ldb, sbyte bo, float beta, ref int C, int ldc, ref int co);

		[DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_gemm_s16s16s32_compute(BlasLayout Layout, int TransA, int TransB, MatrixOffset offsetc,
            int M, int N, int K, float alpha, ref short A, int lda, short ao, ref short B, int ldb, short bo, float beta, ref int C, int ldc, ref int co);
    }

}
